--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = '1.16.5-1.2.5'
+version = '1.16.5-1.2.6'
 group = 'com.github.yuoft' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'OreCrop'
 
@@ -87,12 +87,12 @@ dependencies {
     minecraft 'net.minecraftforge:forge:1.16.5-36.2.34'
 
     runtimeOnly fg.deobf("curse.maven:jei-238222:3681294") //引入mod
-    runtimeOnly fg.deobf("com.github.alexthe666.citadel:citadel:1.8.1-1.16.5")
+//    runtimeOnly fg.deobf("com.github.alexthe666.citadel:citadel:1.8.1-1.16.5")
 
-    compileOnly fg.deobf("com.yuo.spacearms:spacearms:1.16.5-1.3.7") //联动
+    compileOnly fg.deobf("com.yuo.spacearms:spacearms:1.16.5-1.4.1") //联动
     compileOnly fg.deobf("com.github.alexthe666.iceandfire:iceandfire:2.1.9-1.16.5")
-    runtimeOnly fg.deobf("com.yuo.spacearms:spacearms:1.16.5-1.3.7")
-    runtimeOnly fg.deobf("com.github.alexthe666.iceandfire:iceandfire:2.1.9-1.16.5")
+    runtimeOnly fg.deobf("com.yuo.spacearms:spacearms:1.16.5-1.4.1")
+//    runtimeOnly fg.deobf("com.github.alexthe666.iceandfire:iceandfire:2.1.9-1.16.5")
 }
 
 // Example for how to get properties into the manifest for reading by the runtime..
